<resources>
    <string name="app_name">Calculator App</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="multiple">x</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
    <string name="clear">AC</string>
    <string name="operation">15,000-7500</string>
    <string name="result">7,500</string>
</resources>