<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ZeroButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal2"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal1"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/DecimalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/decimal"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal2"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal1"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/EqualButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equal"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/orange_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal3"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal1"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/OneButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal3"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal2"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/TwoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal3"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal2"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ThreeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal3"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal2"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/FourButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal4"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal3"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/FiveButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal4"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal3"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SixButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal4"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal3"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/MinusButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal4"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal3"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SevenButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal5"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal4"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/EightButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal5"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal4"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/NineButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal5"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal4"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/AddButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/add"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal5"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal4"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ClearButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/orange_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal6"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal5"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PercentButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/percent"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal6"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal5"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/DivideButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/divide"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal6"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal5"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/MultipleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiple"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/white_square"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal6"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal5"/>
    <ImageView
        android:id="@+id/lineCustom"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:src="@drawable/line"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal6"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical1"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"/>
    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="48sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal6"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="32dp"/>
    <TextView
        android:id="@+id/txtOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operation"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="-10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>